# openmp-optical-flow

./: .gitignore  CMakeLists.txt  README.md  config.h  main.cpp
